@@ -27,6 +27,10 @@ import movies, tvseries, audio
 import consts, misc
 
 
+
+
+
+
 VERSION = ' V0.0.2.8 - DEV4'
 NAME = 'Plex2csv'
 ART = 'art-default.jpg'
@@ -35,7 +39,9 @@ PREFIX = '/applications/Plex2csv'
 APPGUID = '7608cf36-742b-11e4-8b39-00089bd210b2'
 DESCRIPTION = 'Export Plex libraries to CSV-Files'
 MYHEADER = {}
-CONTAINERSIZE = 20
+CONTAINERSIZEMOVIES = 20
+CONTAINERSIZETV = 5
+CONTAINERSIZEAUDIO = 5
 
 bScanStatus = 0			# Current status of the background scan
 initialTimeOut = 12		# When starting a scan, how long in seconds to wait before displaying a status page. Needs to be at least 1.
@@ -325,6 +331,11 @@ def backgroundScanThread(title, key, sectiontype):
 		raise
 	Log.Debug("*******  Ending backgroundScanThread  ***********")
 
+def getValues(tree, category):
+    parent = tree.find(".//parent[@name='%s']" % category)
+    return [child.get('value') for child in parent]
+
+
 ####################################################################################################
 # This function will scan a movie section.
 ####################################################################################################
@@ -347,7 +358,7 @@ def scanMovieDB(myMediaURL, myCSVFile):
 		csvwriter.writeheader()
 		while True:
 			Log.Debug("Walking medias")
-			fetchURL = myMediaURL + '?X-Plex-Container-Start=' + str(bScanStatusCount) + '&X-Plex-Container-Size=' + str(CONTAINERSIZE)
+			fetchURL = myMediaURL + '?X-Plex-Container-Start=' + str(bScanStatusCount) + '&X-Plex-Container-Size=' + str(CONTAINERSIZEMOVIES)
 			iCount = bScanStatusCount
 			partMedias = XML.ElementFromURL(fetchURL, headers=MYHEADER)
 			if bScanStatusCount == 0:
@@ -368,7 +379,7 @@ def scanMovieDB(myMediaURL, myCSVFile):
 			if int(partMedias.get('size')) == 0:
 				break
 			else:
-				bScanStatusCount += CONTAINERSIZE
+				bScanStatusCount += CONTAINERSIZEMOVIES
 		csvfile.close
 	except HTTPError as e:
 		Log.Critical('The server couldn\'t fulfill the request. Errorcode was %s' %e.code)
@@ -392,92 +403,58 @@ def scanShowDB(myMediaURL, myCSVFile):
 	global bScanStatusCountOf
 	global bScanStatus
 	bScanStatusCount = 0
-
-
-
 	bScanStatusCountOf = 0	
 	iCurrent = 0
-
-
-
-	myMediaPaths = []				# HUH
-
-
-
-
 	try:
 		Log.Debug("About to open file %s" %(myCSVFile))
 		csvfile = io.open(myCSVFile,'wb')
 		# Create output file, and print the header
-		csvwriter = csv.DictWriter(csvfile, fieldnames=movies.getMovieHeader(Prefs['Movie_Level']), delimiter=Prefs['Delimiter'], quoting=csv.QUOTE_NONNUMERIC)
+		csvwriter = csv.DictWriter(csvfile, fieldnames=tvseries.getTVHeader(Prefs['TV_Level']), delimiter=Prefs['Delimiter'], quoting=csv.QUOTE_NONNUMERIC)
 		Log.Debug("Writing header")
 		csvwriter.writeheader()
 		Log.Debug('Starting to fetch the list of items in this section')
 		while True:
 			Log.Debug("Walking medias")
-			fetchURL = myMediaURL + '?X-Plex-Container-Start=' + str(bScanStatusCount) + '&X-Plex-Container-Size=' + str(CONTAINERSIZE)
+			fetchURL = myMediaURL + '?X-Plex-Container-Start=' + str(bScanStatusCount) + '&X-Plex-Container-Size=' + str(CONTAINERSIZETV)
 			iCount = bScanStatusCount
 			partMedias = XML.ElementFromURL(fetchURL, headers=MYHEADER)
 			if bScanStatusCount == 0:
 				totalCount = partMedias.get('totalSize')
 				bScanStatusCountOf = partMedias.get('totalSize')
-				Log.Debug('Amount of items in this section is %s' %totalCount)
+				Log.Debug('Amount of items in this section is %s' %bScanStatusCountOf)
 			# HERE WE DO STUFF
-
-
-
-
-
-
-
-
-
-
-
-
-		AllTVShows = root.findall('.//Directory')		
-		bScanStatusCountOf = len(AllTVShows)
-		csvfile = io.open(myCSVFile,'wb')
-		csvwriter = csv.DictWriter(csvfile, fieldnames=tvseries.getTVHeader(Prefs['TV_Level']), delimiter=Prefs['Delimiter'], quoting=csv.QUOTE_NONNUMERIC)
-		csvwriter.writeheader()
-		for TVShows in AllTVShows:
-			bScanStatusCount += 1
-			ratingKey = TVShows.get("ratingKey")
-			title = TVShows.get("title")
-			myURL = "http://127.0.0.1:32400/library/metadata/" + ratingKey + "/allLeaves"
-			Log.Debug('Show %s of %s with a RatingKey of %s at myURL: %s with a title of "%s"' %(bScanStatusCount, bScanStatusCountOf, ratingKey, myURL, title))
-			req = Request(myURL, headers=MYHEADER)
-			tree2 = et.parse(urllib2.urlopen(req))		
-			root2 = tree2.getroot()
-
-
-
-
-
-
-			Episodes = root2.findall('.//Video')	
-
-			for Episode in Episodes:
-				myRow = {}	
-				# Just assign it temp, if running in simple mode, and don't use it
-				EpisodeMediaRatingKey = Episode.get('ratingKey')
-				# Extended or above?
-				if Prefs['TV_Level'] in ['Extended','Extreme', 'Extreme 2']:
-					myExtendedInfoURL = 'http://127.0.0.1:32400/library/metadata/' + Episode.get('ratingKey') + '?includeExtras=1'
-					EpisodeMedia = XML.ElementFromURL(myExtendedInfoURL, headers=MYHEADER).xpath('//Video')
-				if Prefs['TV_Level'] in ['Extreme 2']:
-					myExtendedInfoURL  = 'http://127.0.0.1:32400/library/metadata/' + Episode.get('ratingKey') + '/tree'
-					Extreme2Level = XML.ElementFromURL(myExtendedInfoURL, headers=MYHEADER).xpath('//MediaPart')
-				# Export the info			
-				myRow = tvseries.getTVInfo(Episode, myRow, MYHEADER, csvwriter, EpisodeMedia, TVShows, Extreme2Level)								
-				csvwriter.writerow(myRow)
-								
-				Log.Debug("Show #%s from database: '%s'" %(bScanStatusCount, misc.GetRegInfo(Episode, 'grandparentTitle') + '-' + misc.GetRegInfo(Episode, 'title')))
-		return
-#	except:
-#		Log.Critical("Detected an exception in scanShowDB")
-#		bScanStatus = 99
-#		raise # Dumps the error so you can see what the problem is
+			Log.Debug("Retrieved part of medias okay [%s of %s]" %(str(bScanStatusCount), str(bScanStatusCountOf)))
+			AllTVShows = partMedias.xpath('.//Directory')
+			for TVShows in AllTVShows:
+				bScanStatusCount += 1
+				ratingKey = TVShows.get("ratingKey")
+				title = TVShows.get("title")
+				myURL = "http://127.0.0.1:32400/library/metadata/" + ratingKey + "/allLeaves"
+				Log.Debug('Show %s of %s with a RatingKey of %s at myURL: %s with a title of "%s"' %(bScanStatusCount, bScanStatusCountOf, ratingKey, myURL, title))
+				Episodes = XML.ElementFromURL(myURL, headers=MYHEADER).xpath('//Video')
+				for Episode in Episodes:
+					myRow = {}	
+					# Just assign it temp, if running in simple mode, and don't use it
+					EpisodeMediaRatingKey = Episode.get('ratingKey')
+					# Extended or above?
+					if Prefs['TV_Level'] in ['Extended','Extreme', 'Extreme 2']:
+						myExtendedInfoURL = 'http://127.0.0.1:32400/library/metadata/' + Episode.get('ratingKey')
+						EpisodeMedia = XML.ElementFromURL(myExtendedInfoURL, headers=MYHEADER).xpath('//Video')
+					if Prefs['TV_Level'] in ['Extreme 2']:
+						myExtendedInfoURL  = 'http://127.0.0.1:32400/library/metadata/' + Episode.get('ratingKey') + '/tree'
+						Extreme2Level = XML.ElementFromURL(myExtendedInfoURL, headers=MYHEADER).xpath('//MediaPart')
+					# Export the info			
+					myRow = tvseries.getTVInfo(Episode, myRow, MYHEADER, csvwriter, EpisodeMedia, TVShows, Extreme2Level)								
+					csvwriter.writerow(myRow)								
+					Log.Debug("Show #%s from database: '%s'" %(bScanStatusCount, misc.GetRegInfo(Episode, 'grandparentTitle') + '-' + misc.GetRegInfo(Episode, 'title')))
+			# Got to the end of the line?		
+			if int(partMedias.get('size')) == 0:
+				break
+			else:
+				bScanStatusCount += CONTAINERSIZETV
+		csvfile.close
+	except ValueError as err:
+		Log.Debug('Exception happend as %s' %err.args)		
 	Log.Debug("******* Ending scanShowDB ***********")
 
 ####################################################################################################
